--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,28 @@
-set-option -g prefix C-a
+set-option -g prefix C-a  # remap prefix from C-b to C-a
+bind-key C-a last-window  # quickly switch between two windows with C-a C-a
+bind v split-window -h  # split vertically like in vim
+unbind %
+
+# switch panes with hjkl
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
+
+# selection and yank like in vim
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+
+# copy to system clipboard (xclip)
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+set -g mouse on  # enable mouse mode
+set -g base-index 1  # start window numbering at 1, not 0
+setw -g mode-keys vi
 
 # options for neovim
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-features ',xterm-256color:RGB'
+
