tmux in nested sessions

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set-option -g prefix C-a  # remap prefix from C-b to C-a
+bind-key a send-prefix  # C-a + a sends prefix to the inner tmux session (nested case)
 bind-key C-a last-window  # quickly switch between two windows with C-a C-a
 bind v split-window -h  # split vertically like in vim
 unbind %
@@ -26,3 +27,14 @@ set-option -g focus-events on
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-features ',xterm-256color:RGB'
 
+# Activate OFF mode (disable outer session in nested situations)
+bind -n M-o \
+    set prefix None \;\
+    set key-table off \;\
+    set status-style "fg=colour245,bg=colour238"
+
+# Disable OFF mode
+bind -T off M-O \
+    set -u prefix \;\
+    set -u key-table \;\
+    set -u status-style
