tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ bind-key C-a last-window  # quickly switch between two windows with C-a C-a
 bind v split-window -h  # split vertically like in vim
 unbind %
 
+set -g status-right "@[#(hostname)]"  # Remove date and time from the right side of the status bar
+set-window-option -g window-status-current-style bg=colour22  # Change the background color of the current window
+
 # switch panes with hjkl
 bind h select-pane -L
 bind l select-pane -R
