better collors for tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,8 +4,11 @@ bind-key C-a last-window  # quickly switch between two windows with C-a C-a
 bind v split-window -h  # split vertically like in vim
 unbind %
 
-set -g status-right "@[#(hostname)]"  # Remove date and time from the right side of the status bar
-set-window-option -g window-status-current-style bg=colour22  # Change the background color of the current window
+# status bar
+set -g status-style bg=color232,fg=green  # status bar background to black and text to green
+set -g status-right "@[#(hostname)]"  # remove date and time from the right side of the status bar
+set -g window-status-style fg=green,bg=color232
+set -g window-status-current-style fg=color232,bg=green
 
 # switch panes with hjkl
 bind h select-pane -L
