replace window bar with tmux bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,8 @@ bind v split-window -h  # split vertically like in vim
 unbind %
 
 # status bar
-set -g status-style bg=color232,fg=green  # status bar background to black and text to green
+set-option -g status-position top
+set -g status-style bg=color232,fg=green
 set -g status-right "@[#(hostname)]"  # remove date and time from the right side of the status bar
 set -g window-status-style fg=green,bg=color232
 set -g window-status-current-style fg=color232,bg=green
