better disabled tmux colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,10 +38,16 @@ set-option -sa terminal-features ',xterm-256color:RGB'
 bind -n M-o \
     set prefix None \;\
     set key-table off \;\
-    set status-style "fg=colour245,bg=colour238"
+    set status-style "fg=red,bg=colour232" \;\
+    set status-right "(OFF) @[#(hostname)]" \;\
+    set window-status-style fg=red,bg=color232 \;\
+    set window-status-current-style fg=color232,bg=red \;\
 
 # Disable OFF mode
 bind -T off M-O \
     set -u prefix \;\
     set -u key-table \;\
-    set -u status-style
+    set -u status-style \;\
+    set -u status-right \;\
+    set -u window-status-style \;\
+    set -u window-status-current-style \;\
