--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,8 @@ set -g status-right "@[#(hostname)]"  # remove date and time from the right side
 set -g window-status-style fg=green,bg=color232
 set -g window-status-current-style fg=color232,bg=green
 
-# switch panes with hjkl
+# vi type bindings
+setw -g mode-keys vi
 bind h select-pane -L
 bind l select-pane -R
 bind k select-pane -U
@@ -25,8 +26,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 set -g mouse on  # enable mouse mode
+set -g history-limit 10000  # increase scrollback lines
 set -g base-index 1  # start window numbering at 1, not 0
-setw -g mode-keys vi
+set -g renumber-windows on  # renumber windows sequentially after closing any of them
 
 # options for neovim
 set-option -sg escape-time 10
