--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
-set-option -g prefix C-a  # remap prefix from C-b to C-a
-bind-key a send-prefix  # C-a + a sends prefix to the inner tmux session (nested case)
-bind-key C-a last-window  # quickly switch between two windows with C-a C-a
+set-option -g prefix C-t  # remap prefix from C-b to C-t
+bind-key t send-prefix  # C-t + t sends prefix to the inner tmux session (nested case)
+bind-key C-t last-window  # quickly switch between two windows with C-t C-t
 bind v split-window -h  # split vertically like in vim
 unbind %
 
